# codex-sdk-python

./: .flake8  .gitignore  AGENTS.md  CHANGELOG_SDK.md  README.md  SETUP.md  codex-sdk-sync  pyproject.toml
.github/workflows/: ci.yml  docs-deploy.yml  publish.yml  release.yml  uv-lock-update.yml
examples/: app_server_approvals.py  app_server_basic.py  app_server_fork.py  app_server_requirements.py  app_server_skill_input.py  app_server_turn_session.py  basic_usage.py  config_overrides.py  hooks_streaming.py  model_configuration_example.py  notify_hook.py  permission_levels_example.py  pydantic_ai_handoff.py  pydantic_ai_model_provider.py  streaming_example.py  structured_output.py  thread_resume.py
package/: package.json
scripts/: extract_changelog.py  setup_binary.py
src/codex_sdk/: __init__.py  abort.py  app_server.py  codex.py  config_overrides.py  events.py  exceptions.py  exec.py  hooks.py  items.py  options.py  telemetry.py  thread.py  tool_envelope.py
src/codex_sdk/integrations/: __init__.py  pydantic_ai.py  pydantic_ai_model.py
tests/: __init__.py  conftest.py  test_abort.py  test_app_server.py  test_app_server_session.py  test_codex.py  test_config_overrides.py  test_docstrings.py  test_exceptions.py  test_exec.py  test_hooks.py  test_pydantic_ai_handoff.py  test_pydantic_ai_model.py  test_telemetry.py  test_thread.py  test_tool_envelope.py
